--- a/src/Component/Home/Home.css
+++ b/src/Component/Home/Home.css
@@ -1,12 +1,10 @@
 .home-first-section {
-    margin-top: 20px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    margin-top: 50px;
     align-items: center;
 }
 
 .first-section {
-    border-left: 3px solid green;
+    border-left: 3px solid darkblue;
 }
 
 .first-section h1 {
